[package]
edition = "2021"
name = "tsp"
version = "0.1.2"
authors = ["Logan Teder"]
description = "Genetic program to solve the travelling salesperson problem"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
piston_window = "0.131"
plotters = "0.3"
plotters-piston = "0.3"
rand = "0.8"

[profile.dev]
opt-level = 2
