[package]
edition = "2024"
name = "tsp"
version = "0.2.0"
authors = ["Logan Teder"]
description = "Genetic program to solve the travelling salesperson problem"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
csv = "1.3"
piston_window = "0.132"
rand = "0.9"

[profile.dev]
opt-level = 1
